# gitMatch

backend/: .gitignore  index.py  pyproject.toml  requirements.txt  vercel.json
backend/src/: index.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: config.ts
frontend/src/components/: ScoreCard.tsx  UserCard.tsx
frontend/src/services/: api.ts
frontend/src/utils/: api.ts  device.ts  scores.ts
