[tool.poetry]
name = "backend"
version = "0.1.0"
description = "gitmatch"
authors = ["a-clumsyman <chanakya.bevera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.110.0"
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
uvicorn = "^0.27.1"
motor = "^3.6.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
